2006-06-25  Roger Leigh  <rleigh@whinlatter.ukfsn.org>

	* sbuild/sbuild-chroot-block-device.cc
	(get_location): Restore
	(set_location): Restore
	(get_keyfile): Restore "location".
	(set_keyfile): Restore "location".  "location" (if specified) must
	be absolute.

	* sbuild/sbuild-chroot-config.cc (print_chroot_config): Don't
	output generated chroots.

	* sbuild/sbuild-chroot-source.cc (clone_source_setup): Set the
	chroot originality to false when cloning.

	* sbuild/sbuild-chroot.(cc|h): Add "original" member, plus getter
	and setter.  This records if the chroot was automatically
	generated or not.  Don't check of "mount-device" is absolute if
	it's empty, since this is optional.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document strict absolute path checks.

	* sbuild/sbuild-chroot-config.cc
	(parse_data): Catch and report chroot deserialisation errors.

	* sbuild/sbuild-chroot-plain.cc
	(set_keyfile): "location" must be absolute.

	* sbuild/sbuild-chroot-file.cc
	(set_keyfile): "file" must be absolute.

	* sbuild/sbuild-chroot.cc
	(set_keyfile): "mount-device" and "mount-location" must be
	absolute.

	* sbuild/sbuild-chroot-lvm-snapshot.cc
	(set_keyfile): "lvm-snapshot-device" must be absolute.

	* sbuild/sbuild-chroot-block-device.cc
	(get_location): Remove unused function
	(set_location): Remove unused function
	(get_keyfile): Remove "location".
	(set_keyfile): Obsolete "location".  "device" must be absolute.

	* sbuild/sbuild-chroot.h (sbuild): Add DEVICE_ABS, FILE_ABS and
	LOCATION_ABS error codes.

	* sbuild/sbuild-keyfile.cc (check_priority): Add missing break in
	switch.

	* dchroot-dsa/dchroot-dsa-session.cc (get_user_command): Throw a
	COMMAND_ABS error if the command is not absolute.

	* sbuild/sbuild-session.(cc|h): Add a COMMAND_ABS error code.

	* dchroot-dsa/dchroot-dsa-options.cc (check_options): Throw an
	error if the command is not an absolute path.  This optimisation